--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=NewsAiDisaster
+
+server.port=8081
+
+feign-client.news-api.name=news2
+feign-client.news-api.url=http://localhost:8080/news
+
+spring.ai.openai.api-key=apikey
+spring.ai.openai.chat.options.model=gpt-4o-mini
